catch empty db names early SERVER-821